Fixes broken links
Links were hidden under the footer

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ main {
 }
 
 footer {
-	position: absolute;
 	left: 0;
 	bottom: 0;
 	height: 50px;
